chore: change json to text

--- a/api-reference/essentials/rate_limit.mdx
+++ b/api-reference/essentials/rate_limit.mdx
@@ -5,7 +5,8 @@ title: Rate Limits
 The Hyperswitch API has multiple checks in place to enhance its stability when faced with sudden surges of incoming traffic. Merchants who send numerous requests in rapid succession could encounter error responses indicated by the status code 429.
 
 <Warning>
-The default rate limit for all Hyperswitch APIs is **80 requests per second**. Reach out to biz@hyperswitch.io if you have a requirement for higher limits.
+  The default rate limit for all Hyperswitch APIs is **80 requests per second**.
+  Reach out to biz@hyperswitch.io if you have a requirement for higher limits.
 </Warning>
 
 ## How to handle rate limits
@@ -20,7 +21,7 @@ Effectively handling rate limit 429 errors is crucial for maintaining a seamless
 
 If you see a 429 error with the following error message, it is due to API locking and not due to rate limiting:
 
-```json
+```text
 At this moment, access to this object is restricted due to ongoing utilization by another API request or an ongoing Hyperswitch process. Retry after some time if this error persists.
 ```
 
