--- a/api-reference/essentials/error_codes.mdx
+++ b/api-reference/essentials/error_codes.mdx
@@ -9,6 +9,7 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | IR         | Invalid Request Error | Error caused due to invalid fields and values in API request |
 | CE         | Connector Error       | Errors originating from connector’s end                      |
 | HE         | Hyperswitch Error     | Errors originating from Hyperswitch’s end                    |
+| WE         | Webhook Error    |                   |
 
 | Error Codes | HTTP Status codes                     | Error Type            | Error message                                                                                                                                                       | Error Handling                                                                                                                                                                       |
 | ----------- | ------------------------------------- | --------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
@@ -30,6 +31,16 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | IR_15       | 400                                   | invalid_request_error | Invalid Ephemeral Key for the customer                                                                                                                              | Please pass the right Ephemeral key for the customer                                                                                                                                 |
 | IR_16       | 400                                   | invalid_request_error | “message”                                                                                                                                                           | Typically used when information involving multiple fields or previously provided information doesn’t satisfy a condition. Refer to our API documentation for required fields and format |
 | IR_17       | 401                                   | invalid_request_error | Access forbidden, an invalid JWT token was used                                                                                                                        | Please provide a valid JWT token to access the APIs                                                                                                                                  |
+| IR_18       |                                    | invalid_request_error | "message"||
+| IR_19       |                                    | invalid_request_error | "message"||
+| IR_20       |                                    | invalid_request_error | "flow" not supported by the "connector"||
+| IR_21       |                                    | invalid_request_error | Missing required params||
+| IR_22       |                                    | invalid_request_error | Access forbidden. Not authorized to access this "resource"||
+| IR_23       |                                    | invalid_request_error |||
+| IR_24       |                                    | invalid_request_error/processing_error | Invalid "wallet_name" wallet token||
+| IR_25       |                                    | invalid_request_error |||
+| IR_26       |                                    | invalid_request_error |||
+| IR_27       |                                    | invalid_request_error |||
 | CE_00       | Status codes shared by the connectors | connector_error       | “message”                                                                                                                                                           | The error code and message passed from the connectors. Refer to the respective connector’s documentation for more information on the error                                           |
 | CE_01       | 400                                   | processing_error      | Payment failed during authorization with the connector. Retry payment                                                                                                   | Retry the payment again as payment failed at the connector during authorization                                                                                                      |
 | CE_02       | 400                                   | processing_error      | Payment failed during authentication with the connector. Retry payment                                                                                                  | Retry the payment again as payment failed at the connector during authentication                                                                                                     |
@@ -38,6 +49,7 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | CE_05       | 400                                   | processing_error      | The card has expired                                                                                                                                                | Card expired. Please pass valid card data                                                                                                                                            |
 | CE_06       | 400                                   | processing_error      | Refund failed while processing with the connector. Retry refund                                                                                                         | Refund failed to process at the connector. Please retry refund                                                                                                                       |
 | CE_07       | 400                                   | processing_error      | Verification failed while processing with the connector. Retry operation                                                                                                | Retry the operation again as verification failed at the connector                                                                                                                    |
+| CE_08       |                                       | processing_error      | Dispute operation failed while processing with connector. Retry operation                                                                                           |   |
 | HE_00       | 500                                   | server_not_available  | Something went wrong                                                                                                                                                | Please retry the operation. If the error still persists, please reach out to Hyperswitch support                                                                                         |
 | HE_01       | 400                                   | duplicate_request     | Duplicate refund request. Refund already attempted with the refund ID                                                                                               | Please verify the refund id and no action required if the refund is already attempted                                                                                                |
 | HE_01       | 400                                   | duplicate_request     | Duplicate mandate request. Mandate already attempted with the Mandate ID                                                                                            | Please verify the mandate id and no action required if the mandate is already created                                                                                                |
@@ -58,3 +70,10 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | HE_04       | 400                                   | object_not_found      | Successful payment not found for the given payment id                                                                                                               | Please verify the payment details and status as you can attempt refunds only for payments with success status                                                                        |
 | HE_04       | 400                                   | object_not_found      | The connector provided in the request is incorrect or not available                                                                                                 | Please verify your connector configuration and provide a valid connector that is enabled for your account                                                                            |
 | HE_04       | 400                                   | object_not_found      | Address does not exist in our records                                                                                                                               | Please verify the address details and pass valid address details                                                                                                                     |
+| HE_05       |
+| HE_06       |
+| WE_01       |||||
+| WE_02       |||||
+| WE_03       |||||
+| WE_04       |||||
+| WE_05       |||||
